--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notesapp",
+  "name": "waller",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
@@ -9,13 +9,52 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "expo": "~51.0.23",
+    "expo-app-loading": "^2.1.1",
+    "expo-av": "~14.0.7",
+    "expo-blur": "^13.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-font": "~12.0.9",
+    "expo-image-manipulator": "^12.0.5",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
+    "expo-video-thumbnails": "~8.0.0",
+    "fast-average-color": "^9.4.0",
+    "firebase": "^10.13.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "lottie-react-native": "^6.7.2",
+    "mongoose": "^8.5.2",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.3",
+    "react-native-elements": "^3.4.3",
+    "react-native-fs": "^2.20.0",
+    "react-native-image-colors": "^2.4.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-masonry-list": "^2.16.2",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.6.0",
+    "react-native-uuid": "^2.0.2",
+    "react-native-video": "^6.4.5",
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-svg-transformer": "^1.5.0"
   },
   "private": true
 }
