--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "expo-font": "~12.0.9",
     "expo-image-manipulator": "^12.0.5",
     "expo-image-picker": "~15.0.7",
+    "expo-media-library": "^16.0.4",
+    "expo-sharing": "^12.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-video-thumbnails": "~8.0.0",
     "fast-average-color": "^9.4.0",
